--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&family=Oswald:wght@600&display=swap"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <title>MemeHub</title>
   </head>
