--- a/backend/src/Mailing/account-created.html
+++ b/backend/src/Mailing/account-created.html
@@ -231,7 +231,7 @@
           <!-- start permission -->
           <tr>
             <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-              <p style="margin: 0;">You received this email because we received a request for password reset for your account. If you didn't request password reset you can safely delete this email.</p>
+              <p style="margin: 0;">You received this email because you created your account. If you didn't create your account then who created your account ?! That's a mystery ! Anyway, you want to make memes? You've come to the right place!
             </td>
           </tr>
           <!-- end permission -->
